# SolidTurbine

./: .gitignore  AerodynamicForces.h  Airfoil.cpp  AirfoilAeroCharacteristic.h  AirfoilCoordinate.h  AirfoilGeoCharacteristic.h  AirfoilGeometryData.cpp  AirfoilGeometryData.h  AirfoilGeometryFileInfo.h  AirfoilGeometryFileListData.h  AirfoilGeometryParser.h  AirfoilGeometryPoint.h  AirfoilPerformanceData.cpp  AirfoilPerformanceData.h  AirfoilPerformanceFileInfo.h  AirfoilPerformanceFileListParser.cpp  AirfoilPerformancePoint.h  AkimaSplineInterpolationStrategy.cpp  AkimaSplineInterpolationStrategy.h  Blade.cpp  Blade.h  BladeGeometryData.cpp  BladeGeometryData.h  BladeGeometryInterpolator.cpp  BladeGeometryInterpolator.h  BladeGeometryParser.cpp  BladeGeometryParser.h  BladeGeometryRow.h  BladeGeometrySection.h  BladeSection.cpp  BoolParser.cpp  CMakeLists.txt  Configuration.cpp  Configuration.h  ConfigurationParameter.h  ConfigurationParser.cpp  ConfigurationParser.h  ConfigurationSchema.cpp  ConfigurationSchema.h  CubicSplineInterpolationStrategy.h  (+29 more)
.github/workflows/: msbuild.yml  windows_release.yml
SolidTurbine.Tests/: SolidTurbine.Tests.vcxproj
doku/: README.md  SolidTurbine.graphml  SolidTurbineUML.graphml
enc_temp_folder/807a32eadc7b3b36f36425f66d139424/: main.cpp
include/: AEPCalculator.h  AirfoilAeroCharacteristic.h  AirfoilAeroCoefficients.h  AirfoilCoordinate.h  AirfoilDataAdapter.h  AirfoilGeometryData.h  AirfoilGeometryFileInfo.h  AirfoilGeometryFileListData.h  AirfoilGeometryFileListParser.h  AirfoilGeometryParser.h  AirfoilGeometryPoint.h  AirfoilOperationCondition.h  AirfoilPerformanceData.h  AirfoilPerformanceParser.h  AirfoilPolarData.h  AirfoilPolarInterpolationFactory.h  AkimaSplineInterpolationStrategy.h  Angles.h  BEMPostprocessor.h  BEMSectionNoiseAdapter.h  BilinearTurbSimInterpolator.h  BladeBodyData.h  BladeBodyManager.h  BladeGeometryData.h  BladeGeometryParser.h  BladeGeometrySection.h  BladeInterpolator.h  BladeNoiseConfigBuilder.h  BladedBinaryReader.h  BoundaryLayer.h  BrentsRootFinder.h  CompareSurfacePanelEdge.h  Configuration.h  ConfigurationAdapter.h  CubicSplineInterpolationStrategy.h  DXFBlade3DExporter.h  DXFCore.h  DXFDocument.h  DXFEntities.h  DXFInterfaces.h  (+105 more)
include/bladenoise/airfoil/: AirfoilGeometryAnalyzer.h  BPMBoundaryLayerCalculator.h  IBoundaryLayerCalculator.h  WallProfileCalculator.h  XfoilBoundaryLayerCalculator.h
include/bladenoise/core/: Constants.h  ProjectConfig.h  Types.h
include/bladenoise/io/: StreamlineWriter.h  TextResultsWriter.h
include/bladenoise/math/: ODEIntegrator.h  SpecialFunctions.h
include/bladenoise/noise/: BluntnessNoiseSource.h  Directivity.h  INoiseSource.h  NoiseCalculator.h  TBLTENoiseSource.h  TurbulentInflowNoiseSource.h
include/bladenoise/potential/: PotentialFlowSolver.h
src/: AEPCalculator.cpp  AeroCharacteristicPoint.h  AerodynamicForces.h  Airfoil.h  AirfoilAeroCharacteristic.cpp  AirfoilCoordinate.h  AirfoilGeometry.cpp  AirfoilGeometry.h  AirfoilGeometryData.cpp  AirfoilGeometryData.h  AirfoilGeometryFileListData.cpp  AirfoilGeometryFileListParser.cpp  AirfoilGeometryFileListParser.h  AirfoilGeometryInterpolationFactory.cpp  AirfoilGeometryInterpolationFactory.h  AirfoilGeometryParser.cpp  AirfoilGeometryParser.h  AirfoilMarker.h  AirfoilOperationCondition.h  AirfoilPerformanceData.h  AirfoilPerformanceFileInfo.h  AirfoilPerformanceFileListData.cpp  AirfoilPerformanceFileListData.h  AirfoilPerformanceFileListParser.cpp  AirfoilPerformanceFileListParser.h  AirfoilPerformanceParser.cpp  AirfoilPerformanceParser.h  AirfoilPerformancePoint.h  AirfoilPolarData.cpp  AirfoilPolarData.h  AirfoilPolarInterpolationFactory.cpp  AirfoilPolarInterpolationFactory.h  AirfoilPolarPoint.h  BEMPostprocessor.cpp  BEMSectionNoiseAdapter.cpp  BilinearTurbSimInterpolator.cpp  Blade.h  BladeBodyManager.cpp  BladeBodyManager.h  BladeGeometryData.cpp  (+157 more)
src/bladenoise/: CMakeLists.txt
src/bladenoise/airfoil/: AirfoilGeometryAnalyzer.cpp  BPMBoundaryLayerCalculator.cpp  BoundaryLayerFactory.cpp  WallProfileCalculator.cpp  XfoilBoundaryLayerCalculator.cpp
src/bladenoise/io/: StreamlineWriter.cpp  TextResultsWriter.cpp
src/bladenoise/math/: ODEIntegrator.cpp  SpecialFunctions.cpp  Spline.cpp
src/bladenoise/noise/: BluntnessNoiseSource.cpp  Directivity.cpp  NoiseCalculator.cpp  TBLTENoiseSource.cpp  TurbulentInflowNoiseSource.cpp
src/bladenoise/potential/: PotentialFlowSolver.cpp
testdata/: blade3D.dxf  blade3D1.dxf  sample_solid.dxf
testdata/AirfoilsGeo/: DTU-Cylinder.geo  FFA-W3-241.geo  FFA-W3-301.geo  FFA-W3-360.geo  FFA-W3-480.geo  NACA64618.geo
tests/: test_MathUtility.cpp
